fix user score position on mobile responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,8 +369,8 @@ header > h1 {
     }
     #user-label {
         position: absolute;
-        top: 20px;
-        left: 10px;
+        top: 18px;
+        left: 2px;
     }
     
     #computer-label {
